@@ -12,6 +12,8 @@ What's new in Python 3.0b2?
 Core and Builtins
 -----------------
 
+- Issue #3236: Return small longs from PyLong_FromString.
+
 Library
 -------
 
